--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Run Python Script
 on:
   push:
     branches:
-      - main  # Change to your default branch if different
+      - main  # Adjust to your default branch if different
   schedule:
     - cron: '0 0 * * 0'  # This runs the workflow every Sunday at midnight UTC.
   workflow_dispatch:  # Allows manual triggering of the workflow.
@@ -27,7 +27,7 @@ jobs:
         pip install -r requirements.txt  # Install requests
 
     - name: Run the script
-      run: python update_altsore.py
+      run: python ./update_altsore.py  # Ensure the path is correct
 
     - name: Commit and push changes
       run: |
