--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,9 @@ jobs:
     
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
+      with:
+          path: main
 
     - name: Set up Python
       uses: actions/setup-python@v2
@@ -27,7 +29,7 @@ jobs:
         pip install -r requirements.txt  # Install requests
 
     - name: Run the script
-      run: python ./update_altsore.py  # Ensure the path is correct
+      run: python main/update_altsore.py  # Ensure the path is correct
 
     - name: Commit and push changes
       run: |
