--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Install requests
+        pip install -r main/requirements.txt  # Install requests
 
     - name: Run the script
       run: python main/update_altsore.py  # Ensure the path is correct
