--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,7 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-      with:
-          path: main
-
+      
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
@@ -26,10 +24,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r main/requirements.txt  # Install requests
+        pip install -r requirements.txt  # Install requests
 
     - name: Run the script
-      run: python altstore/main/update_altsore.py
+      run: python update_altsore_json.py
 
     - name: Commit and push changes
       run: |
