--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
         pip install -r requirements.txt  # Install requests
 
     - name: Run the script
-      run: python ../update_altsore_json.py
+      run: python ./update_altsore_json.py
 
     - name: Commit and push changes
       run: |
