--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+
+    - name: List directory contents
+      run: ls -al
       
     - name: Set up Python
       uses: actions/setup-python@v2
