--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,6 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-
-    - name: List directory contents
-      run: ls -al
       
     - name: Set up Python
       uses: actions/setup-python@v2
@@ -30,7 +27,7 @@ jobs:
         pip install -r requirements.txt  # Install requests
 
     - name: Run the script
-      run: python ./update_altsore_json.py
+      run: python ./update_altstore_json.py  # Correct filename
 
     - name: Commit and push changes
       run: |
