--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,26 +1,21 @@
-name: Run Python Script
+name: Update Apps JSON
 
 on:
   push:
     branches:
-      - master
+      - master  # Adjust to your default branch if different
   schedule:
     - cron: '0 0 * * 0'  # This runs the workflow every Sunday at midnight UTC.
   workflow_dispatch:  # Allows manual triggering of the workflow.
 
-permissions:
-  contents: write  # Grants write permission to commit and push changes
-
 jobs:
-  run-script:
+  update-apps-json:
     runs-on: ubuntu-latest
-
+    
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}  # Use the built-in token to push changes
-
+      
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
@@ -29,15 +24,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Install requests
+        pip install requests PyGithub  # Install requests and PyGithub
 
     - name: Run the script
-      run: python ./update_altstore_json.py  # Correct filename
+      run: python ./update_apps_json.py
 
     - name: Commit and push changes
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add altsore.json
-        git commit -m "Update altsore.json with the latest releases" || echo "No changes to commit"
-        git push origin HEAD:master  # Push changes back to the repository
+        git add apps.json
+        git commit -m "Update apps.json with the latest releases" || echo "No changes to commit"
+        git push
