--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,12 +30,9 @@ jobs:
       run: python ./update_apps_json.py
 
     - name: Commit and push changes
-      env:
-        GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}  # Use your secret here
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add apps.json
         git commit -m "Update apps.json with the latest releases" || echo "No changes to commit"
-        git push https://x-access-token:${GITHUB_TOKEN}@github.com/Raghav1729/altstore.git HEAD:master
-
+        git push
