--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master  # Adjust to your default branch if different
   schedule:
-    - cron: '0 0 * * 0'  # This runs the workflow every Sunday at midnight UTC.
+    - cron: '0 0 1 * *'  # This runs the workflow every month on 1st at midnight UTC.
   workflow_dispatch:  # Allows manual triggering of the workflow.
 
 jobs:
